--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^6.3.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-intersection-observer": "^9.2.2",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "sass": "^1.52.1"
